--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,3 @@
-/* колір основного тексту: #757575 */
-/* колір тексту заголовків: #212121 */
-/* змінний колір тексту голубий: #2196F3 */
-/* білий колір тексту додатковий:  #FFFFFF */
-
-/* bcg колір основний: #FFFFFF */
-/* bcg колір другорядний: #2F303A */
-/* bcg колір команда: #F5F4FA */
 
 :root {
   --primary-text-color: #757575;
@@ -83,6 +75,31 @@ body {
   letter-spacing: 0.03em;
 } 
 
+.btn {
+  min-width: 200px;
+  min-height: 50px;
+  border: none;
+  border-radius: 4px;
+
+  background-color: var(--accent-color);
+  color: var(--white-text-color);
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  font-family: inherit;
+
+  cursor: pointer;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn:hover,
+.btn:focus {
+  background-color: #188ce8;
+}
+
 /* -----------------Header----------------- */
 .header {
   border-bottom: 1px solid #ececec;
@@ -90,8 +107,6 @@ body {
 
 /* Logo */
 .logo {
-  margin-right: 93px;
-
   color: var(--accent-color);
 
   font-family: Raleway, sans-serif;
@@ -101,16 +116,27 @@ body {
   letter-spacing: 0.03em;
 }
 
-.header__logo {
+
+.logo--color-black {
   color: #000000;
 }
 
-.footer-logo {
+.logo--color-white {
   color: var(--white-text-color);
 }
 
+.header__logo {
+  margin-right: 93px;
+}
+
+.footer__logo {
+  margin-bottom: 20px;
+}
+
+
+
 /* Navigation */
-.main-nav {
+.header__container {
   display: flex;
   align-items: center;
 }
@@ -164,6 +190,9 @@ body {
 
 .contacts {
   display: flex;
+}
+
+.header__contacts {
   margin-left: auto;
 }
 
@@ -225,37 +254,14 @@ body {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
 
 .hero__button {
   display: inline-block;
-  padding: 10px 32px;
-  border-radius: 4px;
-  min-width: 200px;
-  text-align: center;
-  border: none;
-
-  background-color: var(--accent-color);
-  color: var(--white-text-color);
-
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-  font-family: inherit;
-
-  cursor: pointer;
-
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hero__button:hover,
-.hero__button:focus {
-  background-color: #188ce8;
-}
 
 /* Sections */
 
@@ -474,19 +480,19 @@ body {
 
 .footer-link {
   display: block;
-  margin-bottom: 20px;
+  
 }
 
-.footer-address {
-  color: var(--white-text-color);
-}
-
-.footer-item-address,
-.footer-item-mail {
+.footer-list__item:not(:last-child) {
   margin-bottom: 9px;
 }
 
-.footer-contacts {
+.footer-list__address {
+  color: var(--white-text-color);
+}
+
+
+.footer-list__contacts {
   color: rgba(255, 255, 255, 0.6);
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -496,39 +502,46 @@ address {
   font-style: normal;
 }
 
-.footer-contacts:hover,
-.footer-contacts:focus {
+.footer-list__contacts:hover,
+.footer-list__contacts:focus {
   color: var(--accent-color);
 }
 
-.footer-address,
-.footer-contacts {
+.footer-list__address,
+.footer-list__contacts {
   display: block;
 }
 
+/* footer center */
 .footer-center {
   margin-right: 93px;
 }
 
-.footer-center-list {
+.footer__text {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--white-text-color);
+
+  margin-bottom: 20px;
+}
+
+.footer-socials {
   display: flex;
 }
 
-.footer-center-item {
+.footer-socials__item {
   width: 44px;
   height: 44px;
 }
 
-.footer-center-item:not(:last-child) {
+.footer-socials__item:not(:last-child) {
   margin-right: 10px;
 }
 
-/* .clients-list {
-  display: flex;
-  justify-content: space-between;
-} */
-
-.footer-center-link {
+.footer-socials__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -541,33 +554,24 @@ address {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-center-link:hover,
-.footer-center-link:focus {
+.footer-socials__link:hover,
+.footer-socials__link:focus {
   background-color: var(--accent-color);
 }
 
-.footer-icon-social {
+.footer-socials__icon {
   width: 20px;
   height: 20px;
   fill: var(--white-color);
 }
 
-.footer-text {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--white-text-color);
 
-  margin-bottom: 20px;
-}
-
+/* Footer form */
 .footer-form {
   display: flex;
 }
 
-.footer-input {
+.footer-form__input {
   margin-right: 12px;
   min-width: 358px;
   background-color: inherit;
@@ -582,26 +586,10 @@ address {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.footer-button {
+.footer-form__button {
   display: flex;
   align-items: center;
-
-  max-width: 200px;
-
-  padding: 10px 29px;
-  background-color: var(--accent-color);
-
-  font-weight: 700;
-  font-size: 16px;
-  line-height: calc(30 / 16);
-  letter-spacing: 0.06em;
-  border: none;
-  border-radius: 4px;
-
-  color: var(--white-text-color);
-
-  cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  justify-content: center;
 }
 
 .footer-button:hover,
@@ -609,7 +597,7 @@ address {
   background-color: #188ce8;
 }
 
-.icon-send {
+.footer-form__icon {
   fill: currentColor;
   margin-left: 10px;
 }
@@ -624,11 +612,11 @@ address {
   margin-bottom: 50px;
 }
 
-.filter-item:not(:last-child) {
+.filter__item:not(:last-child) {
   margin-right: 8px;
 }
 
-.filter-button {
+.filter__button {
   display: inline-block;
   padding: 6px 22px;
   border-radius: 4px;
@@ -651,8 +639,8 @@ address {
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.filter-button:hover,
-.filter-button:focus {
+.filter__button:hover,
+.filter__button:focus {
   color: var(--white-text-color);
   background-color: var(--accent-color);
   box-shadow: 0 3px 1px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.08),
@@ -668,30 +656,22 @@ address {
   margin-bottom: -30px;
 }
 
-.gallery-item {
+.gallery__item {
   flex-basis: calc(100% / 3 - 30px);
   margin-right: 30px;
   margin-bottom: 30px;
 }
 
-.gallery-link {
+.gallery__link {
   display: block;
 
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.gallery-link:hover,
-.gallery-link:focus {
+.gallery__link:hover,
+.gallery__link:focus {
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
-
-/* .gallery-item:not(:nth-child(3n)) {
-  margin-right: 30px;
-}
-
-.gallery-item:not(:nth-last-child(-n + 3)) {
-  margin-bottom: 30px;
-} */
 
 .gallery-thumb {
   position: relative;
@@ -714,13 +694,13 @@ address {
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.gallery-link:hover .gallery-overlay,
-.gallery-link:focus .gallery-overlay {
+.gallery__link:hover .gallery-overlay,
+.gallery__link:focus .gallery-overlay {
   transform: translateY(0);
   opacity: 1;
 }
 
-.gallery-text-overlay {
+.gallery-overlay__text {
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
@@ -735,7 +715,7 @@ address {
   border-left: 1px solid #eeeeee;
 }
 
-.gallery-title {
+.gallery-box__title {
   margin-bottom: 4px;
 
   color: var(--title-text-color);
@@ -745,7 +725,7 @@ address {
   letter-spacing: 0.06em;
 }
 
-.gallery-text {
+.gallery-box__text {
   color: var(--primary-text-color);
 
   font-size: 16px;
@@ -818,19 +798,19 @@ address {
   cursor: pointer;
 }
 
-.icon-close {
+.close-button__icon {
   fill: #000000;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.close-button:hover .icon-close,
-.close-button:focus .icon-close {
+.close-button:hover .close-button__icon,
+.close-button:focus .close-button__icon {
   fill: var(--accent-color);
 }
 
 /* -------------Form-------- */
 
-.form-text {
+.form__text {
   margin-bottom: 12px;
 
   font-weight: 700;
