--- a/css/main.css
+++ b/css/main.css
@@ -253,7 +253,7 @@ body {
 }
 
 /*  Section What we do */
-.section-work {
+.section--work {
   padding-top: 0;
 }
 
@@ -308,7 +308,7 @@ body {
   padding-bottom: 30px;
 }
 
-.team__name {
+.team__title {
   margin-bottom: 10px;
   color: var(--title-text-color);
   font-size: 16px;
@@ -587,12 +587,12 @@ address {
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.gallery-thumb {
+.gallery__thumb {
   position: relative;
   overflow: hidden;
 }
 
-.gallery-overlay {
+.gallery__overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -605,27 +605,27 @@ address {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.gallery__link:hover .gallery-overlay,
-.gallery__link:focus .gallery-overlay {
+.gallery__link:hover .gallery__overlay,
+.gallery__link:focus .gallery__overlay {
   transform: translateY(0);
   opacity: 1;
 }
 
-.gallery-overlay__text {
+.gallery__overlay-text {
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
   color: var(--white-text-color);
 }
 
-.gallery-box {
+.gallery__box {
   padding: 20px 24px;
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
 }
 
-.gallery-box__title {
+.gallery__title {
   margin-bottom: 4px;
   color: var(--title-text-color);
   font-size: 18px;
@@ -633,7 +633,7 @@ address {
   letter-spacing: 0.06em;
 }
 
-.gallery-box__text {
+.gallery__text {
   color: var(--primary-text-color);
   font-size: 16px;
   line-height: 1.89;
