--- a/sass/layout/portfolio/_gallery.scss
+++ b/sass/layout/portfolio/_gallery.scss
@@ -24,12 +24,12 @@
   }
 }
 
-.gallery-thumb {
+.gallery__thumb {
   position: relative;
   overflow: hidden;
 }
 
-.gallery-overlay {
+.gallery__overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -51,7 +51,7 @@
   }
 }
 
-.gallery-overlay__text {
+.gallery__overlay-text {
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
@@ -59,14 +59,14 @@
   color: var(--white-text-color);
 }
 
-.gallery-box {
+.gallery__box {
   padding: 20px 24px;
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
 }
 
-.gallery-box__title {
+.gallery__title {
   margin-bottom: 4px;
 
   color: var(--title-text-color);
@@ -76,7 +76,7 @@
   letter-spacing: 0.06em;
 }
 
-.gallery-box__text {
+.gallery__text {
   color: var(--primary-text-color);
 
   font-size: 16px;
